Adds Korn Ferry to the client list.

--- a/WebContent/clients/index.html
+++ b/WebContent/clients/index.html
@@ -37,12 +37,31 @@
 				</div>
 
 				<div class="client">
+					<a name="kornferry"></a>
+					<img id="kornferry" src="../images/kflogo.png" />
+					<h3>
+						<span>Korn Ferry International</span>
+					</h3>
+					<h4>Content Authoring (2015 - present)</h4>
+					<p class="project-top">
+						Korn Ferry is building a suite of fast and flexible cloud-based tools for their customers, and for internal use by employees.
+						My role is to build a content editor for use by business people to make it easy to standardize content for assessments 
+						and reports and make content reusable.
+					</p>
+					<p>
+						I am doing mostly front-end development in React.js against a Mark Logic REST API. The team is small (6)
+						with a very fast pace and rapidly changing requirements. Everyone on the team
+						does devops work in addition to development.
+					</p>
+    			</div>
+    			
+				<div class="client">
 					<a name="fedex"></a>
 					<img id="fedex" src="../images/240px-FedEx_Ground.svg.png" />
 					<h3>
 						<span>FedEx Ground</span>
 					</h3>
-					<h4>Automated Work Area Design (2014 - present)</h4>
+					<h4>Automated Work Area Design (2014)</h4>
 					<p class="project-top">
 						The AWAD system provides a web application platform used by operations planners.
 						AWAD automates the package delivery assignment process and optimizes vehicle
