--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,16 +1,14 @@
-<link href="css/app.css" rel="stylesheet">
-</head>
-<body>
-
 <!doctype html>
 <html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
     <meta name="author" content="Peter Swartwout"/>
-    <meta name="keywords" content="swartwout, artisan, software, development, java, xml, html, database"/>
+    <meta name="keywords"
+          content="swartwout, artisan solutions, artisan, software, development, solutions, reactjs, java, spring, html"/>
     <meta name="robots" content="all"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Artisan Solutions</title>
+    <link rel="shortcut icon" href="images/big-a.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
