--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,6 +31,7 @@
 <div class="container">
     <div class="intro row">
         <div class="text col-sm-7">
+            <h1>Artisan Solutions</h1>
             <p>
                 Welcome to Artisan Solutions, the consulting company of <span class="em">Peter Swartwout</span>, who always strives to bring artistry to technology.
             </p>
@@ -60,7 +61,7 @@
 
     <div class="content row">
         <div class="colorbar what col-sm-4 col-xs-12">
-            <h3>What I Offer</h3>
+            <h2>What I Offer</h2>
             <p>
                 I can add value to your project in many ways. Call or email to discuss your specific needs.
             </p>
@@ -158,7 +159,7 @@
         </div>
 
         <div class="colorbar clients col-sm-4 col-xs-12">
-            <h3>Clients</h3>
+            <h2>Clients</h2>
             <p>Here are some of the many clients I have helped through the years:</p>
             <div class="indent">
                 <p class="link"><a href="http://www.dqecom.com" target="_blank">
@@ -177,7 +178,7 @@
         </div>
 
         <div class="colorbar partners col-sm-4 col-xs-12">
-            <h3>Partners</h3>
+            <h2>Partners</h2>
             <p>These are companies I have worked with, either as a consultant or as a sub-contractor:</p>
             <div class="indent">
                 <p class="link"><a href="http://summa.com" target="_blank">
