Changes my status to not currently available.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,7 +47,8 @@
                 I can contract directly with clients, or partner with one of the superb local companies listed below.
             </p>
             <p>
-                My status is: <span class="notice">currently available</span>. Please call for details.
+                My status is: <span class="status-working">not currently available</span>. Please contact me anyway if
+                you have a project, for future reference.
             </p>
             <p class="contact">
                 phone: 412-401-6615<br />
