Adds Truefit and GSS to my brag lists.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -163,6 +163,9 @@
             <h2>Clients</h2>
             <p>Here are some of the many clients I have helped through the years:</p>
             <div class="indent">
+                <p class="link"><a href="http://www.globalspecimensolutions.com" target="_blank">
+                    <img class="client-logo gss" src="images/gss.png" title="Global Specimen Solutions, Inc"/>
+                </a></p>
                 <p class="link"><a href="http://www.dqecom.com" target="_blank">
                     <img class="client-logo" src="images/dqe.png" title="DQE Communications"/>
                 </a></p>
@@ -182,8 +185,11 @@
             <h2>Partners</h2>
             <p>These are companies I have worked with, either as a consultant or as a sub-contractor:</p>
             <div class="indent">
+                <p class="link"><a href="http://truefit.io" target="_blank">
+                    <img class="partner-logo" src="images/truefit.png" title="Truefit"/>
+                </a></p>
                 <p class="link"><a href="http://summa.com" target="_blank">
-                    <img class="partner-logo" src="images/summa.png" title="Summa" />
+                    <img class="partner-logo" src="images/summa.png" title="Summa"/>
                 </a></p>
                 <p class="link"><a href="http://openarc.net" target="_blank">
                     <img class="partner-logo" src="images/openarc.png" title="OpenArc"/>
