Changes a few skills.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,8 +47,8 @@
                 I can contract directly with clients, or partner with one of the superb local companies listed below.
             </p>
             <p>
-                My status is: <span class="status-working">not currently available</span>. Please contact me anyway if
-                you have a project, for future reference.
+                My status is: <span class="status-working">not currently available</span>. Please contact me anyway, for
+                future reference.
             </p>
             <p class="contact">
                 phone: 412-401-6615<br />
@@ -81,9 +81,10 @@
                                 <br /><br />I have been coding for 25 years and constantly push myself to learn new things.
                                 Expertise in current web development technologies:
                                 <ul class="skills1">
-                                    <li>ES6</li>
+                                    <li>Angularjs</li>
                                     <li>React</li>
                                     <li>Redux</li>
+                                    <li>ES6</li>
                                     <li>Responsive design</li>
                                     <li>Bootstrap and CSS</li>
                                 </ul>
