Finished the updated client list.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,7 +19,7 @@
 <div class="container">
     <div class="row">
         <div class="text col-sm-8">
-            <h1>Artisan Solutions</h1>
+            <h1 class="mt-0">Artisan Solutions</h1>
             <p class="slogan">Bringing Artistry to Technology</p>
             <p>
                 Welcome to Artisan Solutions, the consulting company of <span class="em">Peter Swartwout</span>.
@@ -128,11 +128,13 @@
 
     <div class="clients col-xs-12">
 
-        <h1>Clients</h1>
-        <p class="mb-4">Here are some of the many clients I have helped through the years, listed most recent first.</p>
-        <div class="d-flex justify-content-around mx-4 mb-4">
+        <h1 class="mt-0">Clients</h1>
+        <p class="mb-4">Here are some of the many clients I have helped through the years, listed most recent first.
+            Click on a card to reach their website.</p>
+        <div class="d-flex justify-content-around mx-4">
             <a class="client-card" href="https://www.fordpro.com/en-us" target="_blank">
-                <img class="client-logo" style="margin-left: 31px; margin-bottom: 3px" alt="Ford Pro" src="images/ford-pro-logo.png" title="Ford Pro"/>
+                <img class="client-logo" style="margin-left: 31px; margin-bottom: 3px" alt="Ford Pro"
+                     src="images/ford-pro-logo.png" title="Ford Pro"/>
                 <div class="project-summary">
                     While a consultant at Focused Labs, this project enabled commercial fleet customers to purchase
                     products and services from Ford Pro.
@@ -152,7 +154,7 @@
                 </div>
             </a>
         </div>
-        <div class="d-flex justify-content-around mx-4 mb-4">
+        <div class="d-flex justify-content-around mx-4">
             <a class="client-card" href="https://www.hertz.com/us/en/programs/rideshare-rentals" target="_blank">
                 <img class="client-logo" alt="Hertz" src="images/hertz-logo.png" title="Hertz Ride Share Rentals"/>
                 <div class="project-summary">
@@ -163,7 +165,9 @@
                     My roles were solution consultant, REST API developer, Kotlin/Spring developer.
                 </div>
             </a>
-            <a class="client-card" href="https://labcorp-prod.adobecqms.net/services/clinical-testing/central-laboratory-services/GlobalCODE.html" target="_blank">
+            <a class="client-card"
+               href="https://labcorp-prod.adobecqms.net/services/clinical-testing/central-laboratory-services/GlobalCODE.html"
+               target="_blank">
                 <img class="client-logo w-100" alt="GSS" src="images/gss-logo.png" title="Global Specimen Solutions"/>
                 <div class="project-summary">
                     This project was GlobalCode, a SaaS app for translational medicine.
@@ -174,36 +178,57 @@
                 </div>
             </a>
         </div>
-        <div class="d-flex justify-content-between mx-4">
-            <div class="client-card">
-                <a class="client-link"
-                   href="https://labcorp-prod.adobecqms.net/services/clinical-testing/central-laboratory-services/GlobalCODE.html"
-                   target="_blank">
-                    <img class="client-logo w-100" alt="GSS" src="images/gss-logo.png"
-                         title="Global Specimen Solutions, Inc"/>
-                </a>
+        <div class="d-flex justify-content-around mx-4">
+            <a class="client-card" href="https://www.kornferry.com/" target="_blank">
+                <img class="client-logo w-75 mt-2" style="margin-left: 40px" alt="Korn Ferry"
+                     src="images/korn-ferry-logo.png" title="Korn Ferry International"/>
                 <div class="project-summary">
-                    The project was GlobalCode, a SaaS app for translational medicine. My role was Dev Lead and
-                    part-time HR manager.
+                    As an independent contractor at Korn Ferry, my team created a content editor as a SaaS app.
+                    This used new-at-the-time React.js integrated with an API supplied by NoSql database MarkLogic.
                 </div>
-            </div>
-            <div class="client-card col-xs-12 col-sm-4">
-                <a href="http://www.kornferry.com" target="_blank">
-                    <img class="client-logo" src="images/kflogo.png" title="Korn Ferry"/>
-                </a>
-            </div>
-            <div class="client-card col-xs-12 col-sm-3">
-                <a href="http://www.fedex.com/us" target="_blank">
-                    <img class="client-logo" src="images/fedexground.png" title="Fedex Ground"/>
-                </a>
-            </div>
+                <div class="project-summary">
+                    My role was React developer, Redux developer, Javascript developer.
+                </div>
+            </a>
+            <a class="client-card" href="https://www.fedex.com/en-us/shipping/ground.html#" target="_blank">
+                <img class="client-logo mt-3 mb-2" style="height: 60px; margin-left: 40px" alt="Fedex Ground"
+                     src="images/fedex-ground-logo.png" title="Fedex Ground"/>
+                <div class="project-summary">
+                    As an independent contractor at Fedex Ground, this project enabled advanced mapping features,
+                    previously
+                    unavailable in a browser.
+                </div>
+                <div class="project-summary">
+                    My roles were Java/Spring developer, Java Flex developer.
+                </div>
+            </a>
         </div>
-        <div class="d-flex justify-content-between mx-4">
-            <div class="client-card col-xs-12 col-sm-3">
-                <a href="http://www.pnc.com" target="_blank">
-                    <img class="client-logo" src="images/pnc.png" title="PNC Bank"/>
-                </a>
-            </div>
+        <div class="d-flex justify-content-around mx-5">
+            <a class="logo-card" href="https://www.dqecom.com/" target="_blank">
+                <img class="logo-only" alt="DQE" src="images/dqe-logo.png" title="DQE Communications"/>
+            </a>
+            <a class="logo-card" href="https://www.pnc.com/en/corporate-and-institutional/treasury-management.html"
+               target="_blank">
+                <img class="logo-only" alt="PNC" src="images/pnc-logo.png" title="PNC Bank Treasury Management"/>
+            </a>
+            <a class="logo-card" href="https://bodymedia.com/" target="_blank">
+                <img class="logo-only mt-1" alt="Body Media" src="images/body-media-logo.png" title="Body Media"/>
+            </a>
+        </div>
+        <div class="d-flex justify-content-around mx-5">
+            <a class="logo-card" href="https://www.upmc.com/" target="_blank">
+                <img class="logo-only" style="width: 80%; margin-left: 20px; margin-top: 25px" alt="UPMC"
+                     src="images/upmc-logo.png" title="University of Pittsburgh Medical Center"/>
+            </a>
+            <a class="logo-card" href="https://www.cigna.com/individuals-families/member-guide/home-delivery-pharmacy"
+               target="_blank">
+                <img class="logo-only mt-2" style="height: 70px; width: 70%" alt="CIGNA" src="images/cigna-logo.png"
+                     title="CIGNA MailRx"/>
+            </a>
+            <a class="logo-card" href="https://dom.pitt.edu/" target="_blank">
+                <img class="logo-only" alt="Pitt Medicine" src="images/pitt-medicine-logo.png"
+                     title="University of Pittsburgh School of Medicine"/>
+            </a>
         </div>
     </div>
 
