--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" media="all" type="text/css" href="css/artisan.css"/>
 </head>
 <body>
-
 <div class="container">
     <div class="row">
         <div class="text col-sm-8">
@@ -232,25 +231,63 @@
         </div>
     </div>
 
-    <div class="colorbar partners col-sm-4 col-xs-12">
-        <h2>Partners</h2>
-        <p>These are companies I have worked with, either as a consultant or as a sub-contractor:</p>
-        <div class="indent">
-            <p class="link"><a href="http://truefit.io" target="_blank">
-                <img class="partner-logo" src="images/truefit.png" title="Truefit"/>
-            </a></p>
-            <p class="link"><a href="http://summa.com" target="_blank">
-                <img class="partner-logo" src="images/summa.png" title="Summa"/>
-            </a></p>
-            <p class="link"><a href="http://openarc.net" target="_blank">
-                <img class="partner-logo" src="images/openarc.png" title="OpenArc"/>
-            </a></p>
-            <p class="link"><a href="http://cpr-pa.com" target="_blank">
-                <img class="partner-logo" src="images/cpr.png" title="Consulting Professional Resources"/>
-            </a></p>
-            <p class="link"><a href="http://www.tek-connexion.com" target="_blank">
-                <img class="partner-logo" src="images/tekconnexion.png" title="Tek Connexion"/>
-            </a></p>
+    <div class="partners col-xs-12">
+
+        <h1 class="mt-0">Partners</h1>
+        <p class="mb-4">These are service & staffing companies I have worked with, either as a consultant or as a
+            sub-contractor,
+            listed most recent first. Click on a card to reach their website.</p>
+        <div class="d-flex justify-content-around mx-4">
+            <a class="partner-card" href="https://focusedlabs.io/" target="_blank">
+                <img class="partner-logo mt-1" alt="Focused Labs"
+                     src="images/focused-labs-logo.jpeg" title="Focused Labs"/>
+                <div class="partner-summary">
+                    Based in Chicago, Focused Labs is a software services company specializing in digital
+                    transformation, legacy modernization, and AI enablement.
+                </div>
+                <div class="partner-summary">
+                    I worked at Focused Labs for 2 years.
+                    My job title was Lead Consultant / Software Engineering Manager. I was approximately 80/20
+                    engineering/management. I had 4-5 direct reports.
+                </div>
+            </a>
+            <a class="partner-card" href="https://openarc.net/" target="_blank">
+                <img class="partner-logo ms-4 mt-3 mb-2" alt="OpenArc" src="images/open-arc-logo.png" title="OpenArc"/>
+                <div class="partner-summary">
+                    OpenArc is a software solutions, staffing & recruiting firm based in Pittsburgh.
+                    They have delivered extremely high quality software solutions to hundreds of clients.
+                    OpenArc gets consistently good reviews from satisfied clients.
+                </div>
+                <div class="partner-summary">
+                    I was a sub-contractor here for a job at DQE Communications.
+                </div>
+            </a>
+        </div>
+        <div class="d-flex justify-content-around mx-4">
+            <a class="partner-card" href="https://www.cgi.com/en" target="_blank">
+                <img class="partner-logo ms-4 mt-2" style="height: 80px" alt="CGI"
+                     src="images/summa-logo.png" title="CGI"/>
+                <div class="partner-summary">
+                    Summa Technology & Business was a software and business consulting firm based in Pittsburgh.
+                    They have since been acquired by CGI, an international IT and business consulting services firm.
+                    While at Summa I worked on a wide variety of projects for many clients, some of whom
+                    are highlighted above: PNC Bank, BodyMedia, UPMC, Cigna and Pitt School of Medicine.
+                </div>
+                <div class="partner-summary">
+                    I worked at Summa for 4 years. My job title was Senior Technical Consultant.
+                </div>
+            </a>
+            <a class="partner-card" href="https://truefit.io/" target="_blank">
+                <img class="partner-logo ms-4 mt-2 mb-1" style="height: 80px" alt="TrueFit" src="images/truefit-logo.jpeg" title="OpenArc"/>
+                <div class="partner-summary">
+                    Truefit is a software solutions business based in Pittsburgh. They have partnered with many clients
+                    to deliver high quality software. They are know for mobile
+                    apps and SaaS apps but have expertise in many different tech stacks and business domains.
+                </div>
+                <div class="partner-summary">
+                    I was a sub-contractor here for a job at Global Specimen Solutions.
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -261,10 +298,9 @@
     <span class="phone col-xs-12 col-sm-4">e: peter@artisansoft.com</span>
 </div>
 
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
 </body>
 </html>
